fix(ui): make mail timeline readable with Jet skin

--- a/src/resources/css/skins/jet.css
+++ b/src/resources/css/skins/jet.css
@@ -215,6 +215,21 @@ table.dataTable tr.shown + tr {
     border-color: rgba(146, 131, 116, .125);
 }
 
+.timeline > div > .timeline-item {
+    background-color: #282828;
+    box-shadow: 0 0 1px rgba(146, 131, 116, .125), 0 1px 3px rgba(146, 131, 116, .2);
+    border-color: rgba(146, 131, 116, .125);
+    color: #ebdbb2;
+}
+
+.timeline > div .timeline-item > .timeline-header {
+    color: #a89984;
+}
+
+.accordion > .card > .card-header {
+    background-color: #2f2f2f !important;
+}
+
 .modal-content {
     background-color: #3c3836;
 }
